2009-06-15  Andreas Kirschbaum

	* Do not crash after network errors.

	* ragnorok: Fix colors in "Important" and "Chat" tabs of message window.

2009-06-08  Andreas Kirschbaum

	* Add "alchemy" display to skills dialog.

2009-06-07  Andreas Kirschbaum

	* Fix crash when receiving magicmap protocol commands with negative
	coordinates.

2009-06-06  Andreas Kirschbaum

	* ragnorok: Change text colors. Now all colors contrast with the background
	color and differ from each other.

	* Add debug_colors command to print text using different colors.

	* Fix bind command to allow re-binding of keys.

2009-06-01  Andreas Kirschbaum

	* Report connection failures to user.

	* Do not exit the application on ESC while connecting to a server.

2009-05-25  Andreas Kirschbaum

	* Disable per-dialog key bindings of cursor keys in inventory dialog. Now the
	character may move around while the inventory dialog is open.

	* Make login/logout messages darker to improve readability.

	* Do not write invalid keybindings files.

2009-05-24  Andreas Kirschbaum

	* Add "def item" skin command. Move recurring parameters from "item"
	and "inventory_list" commands to "def item" parameters.

2009-05-23  Andreas Kirschbaum

	* Make /tell messages darker to improve readability.

	* Add 'R' keybinding: reply to last player that has sent a /tell command.

2009-05-21  Andreas Kirschbaum

	* Fix display issues when the character is running.

2009-04-16  Andreas Kirschbaum

	* Add "clear" command to clear the message window.

2009-03-16  Andreas Kirschbaum

	* Ignore media tags in communication
	messages (chat/shout/say/etc.).

2009-03-08  Andreas Kirschbaum

	* Add spellpoint and grace indicators right above the player.

	* ragnorok: Make 'chat' messages darker to improve readability.

	* Fix crash due to "java.util.ConcurrentModificationException" when updating
	the ground or inventroy view.

	* Save shortcuts per character.

2009-02-22  Andreas Kirschbaum

	* Fix shortcuts loader for commands.
