@@ -1,5 +1,7 @@
 2009-06-15  Andreas Kirschbaum
 
+	* Include failure reason in connection error dialog.
+
 	* Do not crash after network errors.
 
 	* ragnorok: Fix colors in "Important" and "Chat" tabs of message window.
